Ensure that the text in the Title field in the new forum editor is visible in dark-style skins.
FossilOrigin-Name: 4041c766dd49beef63a1e445e91e372f83a83cacaab1195ab7fa22d39da29017

--- a/src/style.forum.css
+++ b/src/style.forum.css
@@ -65,7 +65,6 @@ body.cpage-forumnew .ForumPostEditor .tab-panel.editor-wrapper > .editor {
   /* Clear some globals... */
   font-size: inherit;
   max-width: initial;
-  color: initial;
 }
 .ForumPostEditor > .buttons {
   font-size: 90%;
